[tool.poetry]
name = "xai-neural-network"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.0"
lime = "^0.2.0.1"
beautifulsoup4 = "^4.12.2"
nltk = "^3.8.1"
scikit-learn = "^1.3.2"
pandas = "2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
